@@ -1,3 +1,7 @@
+2011-05-23  Bernhard Walle <bernhard@bwalle.de>
+
+	* Add Datetime::dateStr().
+
 2011-05-14  Bernhard Walle <bernhard@bwalle.de>
 
 	* Fix leak in DETACHED threads.
